Optimize kqueue hook.

--- a/lib_fiber/samples-c/test/Makefile
+++ b/lib_fiber/samples-c/test/Makefile
@@ -5,6 +5,7 @@ all:
 	@(cd fiber2; make)
 #	@(cd fiber3; make)
 	@(cd fiber4; make)
+	@(cd kqueue_hook; make)
 #	@(cd client2; make)
 #	@(cd server2; make)
 	@(cd bio_client; make)
@@ -15,6 +16,7 @@ cl clean:
 	@(cd fiber2; make clean)
 	@(cd fiber3; make clean)
 	@(cd fiber4; make clean)
+	@(cd kqueue_hook; make clean)
 	@(cd server2; make clean)
 	@(cd client2; make clean)
 	@(cd bio_client; make clean)
