Test fiber in windows.

--- a/lib_fiber/samples-gui/WinFiber/WinFiber_vc2022.vcxproj
+++ b/lib_fiber/samples-gui/WinFiber/WinFiber_vc2022.vcxproj
@@ -481,6 +481,7 @@
       <AdditionalIncludeDirectories>..\..\..\lib_acl_cpp\include;..\..\..\lib_acl\include;..\..\..\lib_fiber\c\include;..\..\..\lib_fiber\cpp\include</AdditionalIncludeDirectories>
       <AdditionalOptions>/Zc:__cplusplus %(AdditionalOptions)</AdditionalOptions>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
